# MAPiWD-project

./: .gitignore  README.md  generate_report.py  pyproject.toml
notebooks/: 01_analiza_danych.ipynb  02_preprocessing.ipynb  03_analiza.ipynb
reports/: 01_analiza_danych.html  01_analiza_danych_full.html  02_preprocessing.html  02_preprocessing_full.html  03_analiza.html  03_analiza_full.html
src/: download_data.py
