[project]
name = "house-price-prediction"
version = "0.1.0"
description = "Analiza i predykcja cen mieszkań - projekt zaliczeniowy MAPiWD"
authors = [
    {name = "Jakub Nowosad"}
]
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "nbconvert (>=7.17.1,<8.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyppeteer (>=2.0.0,<3.0.0)"
]
